# smarttask

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
alembic/versions/: 2da9689fd84b_initial_schema.py
app/: main.py
app/api/: auth.py
app/core/: database.py  security.py  settings.py
app/models/: project_member.py  task_assignee.py  tokens.py
app/schemas/: user.py
app/services/: token_service.py  user_service.py
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 156cb8e935b8_initial_schema.py  2da9689fd84b_initial_schema.py  767028e21fbb_add_comments_table.py  b20a6b8089d4_rename_token_hash_to_otp_code_in_.py
backend/app/: main.py
backend/app/api/: auth.py  comments.py  projects.py  tasks.py  users.py
backend/app/core/: email.py  permissions.py  settings.py
backend/app/dependencies/: auth.py  projects.py
backend/app/models/: __init__.py  comment.py  enums.py  project.py  task.py  tokens.py  user.py
backend/app/repositories/: __init__.py  comment_repository.py  password_reset_repository.py  project_repository.py  task_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: comment.py  member.py  project.py  task.py  user.py
backend/app/services/: auth_service.py  comment_service.py  password_reset_service.py  project_service.py  task_service.py  token_service.py  user_service.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  comments.js  projects.js  tasks.js
(+14 files in other folders)
